update front page color

--- a/src/assets/scss/object/component/_card.scss
+++ b/src/assets/scss/object/component/_card.scss
@@ -500,6 +500,7 @@
 			font-weight: 700;
 			font-family: cross-platform-yu-gothic;
 			letter-spacing: 0.2em;
+			color: #258acf;
 
 
 			@include is-max(430px) {
