--- a/src/assets/scss/object/component/_slider.scss
+++ b/src/assets/scss/object/component/_slider.scss
@@ -217,6 +217,7 @@
 			line-height: 1;
 			padding: 20px 0;
 			line-height: 21px;
+			color: #258acf;
 			@include font-line(14);
 
 			@include is-max(780px) {
