--- a/src/assets/scss/pages/_access.scss
+++ b/src/assets/scss/pages/_access.scss
@@ -1,6 +1,16 @@
 .acc {
 	.c-banner {
 		padding: 0 0 80px 0;
+
+		.c-ruf-txt {
+			@include is-sp {
+				padding: 35px 0 20px 35px;
+				letter-spacing: 0.12em;
+				img {
+					width: 65.6px;
+				}
+			}
+		}
 	}
 
 	position: relative;
@@ -21,6 +31,8 @@
 
 		@include is-sp {
 			padding-bottom: 101px;
+			clip-path: polygon(0 4%, 100% 1%, 100% 101%, 0% 100%);
+			padding-top: 100px;
 		}
 
 		.l-wrap {
@@ -121,7 +133,7 @@
 
 		@include is-sp {
 			letter-spacing: 0.2em;
-			@include font-line(25, 32);
+			@include font-line(25, 37.5);
 			padding: 24px 0 20px 0;
 		}
 	}
@@ -300,11 +312,71 @@
 				& .info:last-child {
 					.info_left {
 						border-bottom: 1px solid #fff;
+
+						&::after {
+							height: 87%;
+							background-color: #fff;
+							top: 9%;
+
+							// @include is-sp {
+							// 	height: 80%;
+							// }
+						}
 					}
 
 					.info_right {
 						border-bottom: 1px solid #fff;
 					}
+				}
+
+				& .info:nth-child(3) {
+					.info_left {
+
+						&::after {
+							height: 87%;
+							top: 9%;
+							background-color: #fff;
+
+							// @include is-sp {
+							// 	height: 80%;
+							// }
+						}
+					}
+
+					
+				}
+
+				& .info:nth-child(2) {
+					.info_left {
+
+						&::after {
+							height: 95%;
+							top: 2%;
+							background-color: #fff;
+
+							// @include is-sp {
+							// 	height: 80%;
+							// }
+						}
+					}
+					
+				}
+
+				& .info:first-child {
+					.info_left {
+
+						&::after {
+							height: 92%;
+							top: 4%;
+							background-color: #fff;
+
+							// @include is-sp {
+							// 	height: 93%;
+							// 	top: 3%;
+							// }
+						}
+					}
+					
 				}
 			}
 
@@ -516,6 +588,11 @@
 			top: 62px;
 			z-index: -1;
 			width: 373px;
+
+			@include is-sp {
+				width: 122px;
+				top: 16px;
+			}
 		}
 
 		&__bg_2 {
@@ -529,8 +606,9 @@
 			// }
 
 			@include is-sp {
-				top: 264px;
-				width: 178px;
+				top: 232px;
+				left: 8px;
+				width: 144px;
 			}
 		}
 
@@ -543,6 +621,7 @@
 
 			@include is-sp {
 				margin-bottom: 50px;
+				padding-left: 10px;
 			}
 		}
 	}
@@ -557,6 +636,16 @@
 		@include is-sp {
 			right: 10px;
 			width: 161px;
+		}
+	}
+
+	&__bg_1_sp {
+		position: absolute;
+		top: -57px;
+
+		@include is-sp {
+			right: 10px;
+			width: 171px;
 		}
 	}
 
@@ -575,9 +664,16 @@
 		}
 	}
 
+	&--cntct {
+		@include is-sp {
+			padding-bottom: 60px !important;
+		}
+	}
+
 	&--fd {
 		@include is-sp {
 			flex-direction: column;
+			padding: 0;
 		}
 	}
 
@@ -586,6 +682,10 @@
 		margin: 0;
 		color: #258acf;
 		letter-spacing: 0.2em;
+
+		@include is-sp {
+			letter-spacing: 0.13em;
+		}
 	}
 
 	&--btn:first-child {
@@ -635,6 +735,10 @@
 			@include font-line(25);
 			letter-spacing: 0.075em;
 			line-height: 39px;
+		}
+
+		@include is-max(410px) {
+			font-size: 5.9vw;
 		}
 	}
 }
