--- a/src/assets/scss/pages/_message.scss
+++ b/src/assets/scss/pages/_message.scss
@@ -9,9 +9,39 @@
     .c-banner {
         padding-bottom: 108px;
         position: relative;
+        background: linear-gradient(to left, #81b3d4, #5fa5cd);
 
         @include is-sp {
             padding-bottom: 80px;
+        }
+
+        .c-ruf-txt {    
+            @include is-sp {
+                padding: 34px 0 30px 35px;
+                @include font-line(14.5,17.5);
+                letter-spacing: 0.24em;
+                font-weight: 700;
+                
+            }
+            @include is-max (375px) {
+                white-space: nowrap;
+                padding: 34px 0 30px 30px;
+            }
+
+            @include is-max (373px) {
+                font-size: 3.8vw;
+               
+            }
+
+            img {
+                @include is-sp {
+                    margin-right: 12.5px;
+                    
+                }
+                @include is-max (500px) {
+                    width: 65.5px;
+                }
+            }
         }
         &--ttl {
             @include is-sp {
@@ -70,6 +100,7 @@
         position: relative;
         z-index: 150;
         padding-top: 12px;
+
         .txt {
             width: 90%;
             margin: 0 auto;
@@ -95,7 +126,7 @@
         right: 0%;
 
         @include is-sp {
-            width: 83%;
+            width: 278.5px;
             height: 161px;
             top: -30px;
         }
@@ -104,6 +135,8 @@
     .section_1 {
         position: relative;
         z-index: 150;
+
+
         // clip path
         .clip-top {
             margin-bottom: 50px !important;
@@ -120,9 +153,8 @@
             }
         }
         .clipPath {
-            clip-path: polygon(0 8%, 100% 0, 100% 100%, 88% 95%, 0 100%);
-            background: linear-gradient(#2579bf, #2593d5);
-
+            clip-path: polygon(0 8%, 100% 0, 100% 100%, 86% 95%, 0 100%) ;
+            background: linear-gradient(to left,#2593D5, #2579BF);
             padding-top: 0;
 
             @include is-sp {
@@ -132,10 +164,6 @@
             @include is-max(640px) {
                 clip-path: polygon(100% 0%, 100% 100%, 84% 98%, 0% 100%, 0 4%);
             }
-
-            // @include is-max(376px) {
-            //     clip-path: polygon(100% 0%, 100% 100%, 84% 98%, 0% 100%, 0 4%);
-            // }
 
             .cntnt {
                 padding: 195px 0 145px 0;
@@ -154,10 +182,11 @@
                     font-family: century-gothic, sans-serif;
                     letter-spacing: 0.32em;
                     font-weight: 400;
-                    color: #95c6e7;
+                    color: #fff;
 
                     @include is-sp {
                         @include font-line(12.5, 10);
+                        color: #95c6e7;
                     }
                 }
 
@@ -194,7 +223,7 @@
                     }
 
                     @include is-max(375px) {
-                        font-size: 3.6vw;
+                        font-size: 3.5vw;
                     }
                     @include is-max(337px) {
                         font-size: 3.4vw;
@@ -231,7 +260,7 @@
                             &-txt {
                                 color: #fff;
                                 font-family: cross-platform-yu-gothic;
-                                @include font-line(12, 26);
+                                @include font-line(13, 26);
                                 font-weight: 500;
                                 letter-spacing: 0.2em;
                                 text-align: justify;
@@ -268,7 +297,7 @@
                         margin: 0 auto;
 
                         @include is-sp {
-                            flex-direction: column-reverse;
+                            flex-direction: column;
                             justify-content: space-between;
                             height: 165px;
                             width: 100% !important;
@@ -303,7 +332,7 @@
 
         .sec1-bg2 {
             position: absolute;
-            top: 24%;
+            top: 28%;
             left: -6%;
             z-index: -1;
             opacity: 0.5;
@@ -318,7 +347,6 @@
 
     // SECTION 2
     .section_2 {
-
         .sec2-bg1 {
             position: absolute;
             top: 0;
@@ -327,7 +355,7 @@
 
         .sec2-bg2 {
             position: absolute;
-            bottom: 19%;
+            top: 58%;
             left: -1%;
             z-index: -1;
         }
@@ -382,7 +410,7 @@
 
                 &-txt {
                     letter-spacing: 0.2em;
-                    @include font-line(12, 25);
+                    @include font-line(12.93, 25);
                     text-align: justify;
 
                     @include is-sp {
@@ -400,14 +428,15 @@
 
         .clipPath {
             clip-path: polygon(19% 11%, 100% 0, 100% 100%, 0 100%, 0 0);
-            background: linear-gradient(#2579bf, #2593d5);
+            background: linear-gradient(to left,#2593D5, #2579BF);
             padding: 144px 0 99px 0;
 
             @include is-sp {
                 clip-path: polygon(14% 5%, 100% 0, 100% 100%, 0 100%, 0 0);
+                padding: 99px 0 99px 0;
             }
 
-            @include is-max (426px) {
+            @include is-max(426px) {
                 clip-path: polygon(14% 3%, 100% 0, 100% 100%, 0 100%, 0 0);
             }
         }
@@ -438,7 +467,8 @@
                     &-txt {
                         color: #fff;
                         font-family: cross-platform-yu-gothic;
-                        @include font-line(12, 25);
+                        @include font-line(12.93
+                        , 25);
                         font-weight: 500;
                         letter-spacing: 0.2em;
                         text-align: justify;
@@ -447,8 +477,6 @@
                             @include font-line(13.5, 20);
                             letter-spacing: 0.08em;
                         }
-
-                      
                     }
                 }
 
@@ -475,7 +503,7 @@
                 margin: 0 auto;
 
                 @include is-sp {
-                    flex-direction: column-reverse;
+                    flex-direction: column;
                     justify-content: space-between;
                     height: 165px;
                     width: 100% !important;
