changed: update btncase-components, addons, footer, access page

--- a/src/assets/scss/object/component/_button.scss
+++ b/src/assets/scss/object/component/_button.scss
@@ -379,6 +379,7 @@
         padding: 20px 0;
         line-height: 1;
         @include font-line(14);
+		white-space: nowrap !important;
     }
     img {
         width: 5px;
