--- a/src/assets/scss/pages/_access.scss
+++ b/src/assets/scss/pages/_access.scss
@@ -2,12 +2,36 @@
 	.c-banner {
 		padding: 0 0 80px 0;
 
+		// .c-ruf-txt {
+		// 	@include is-sp {
+		// 		padding: 35px 0 20px 35px;
+		// 		letter-spacing: 0.12em;
+		// 		img {
+		// 			width: 65.6px;
+		// 		}
+		// 	}
+		// }
+
 		.c-ruf-txt {
 			@include is-sp {
-				padding: 35px 0 20px 35px;
-				letter-spacing: 0.12em;
-				img {
-					width: 65.6px;
+				padding: 34px 0 30px 35px;
+				@include font-line(14.5, 17.5);
+				letter-spacing: 0.24em;
+				font-weight: 700;
+			}
+			@include is-max(375px) {
+				white-space: nowrap;
+				padding: 34px 0 30px 30px;
+			}
+			@include is-max(373px) {
+				font-size: 3.8vw;
+			}
+			img {
+				@include is-sp {
+					margin-right: 12.5px;
+				}
+				@include is-max(500px) {
+					width: 65.5px;
 				}
 			}
 		}
@@ -211,8 +235,20 @@
 						// 	width: 230px;
 						// }
 
+						// @include is-max(373px) {
+						// 	width: 65px;
+						// }
+
+						@include is-max(900px) {
+							width: 80px;
+						}
+
 						@include is-sp {
 							width: 100px;
+						}
+
+						@include is-max(373px) {
+							width: 65px;
 						}
 
 						&::after {
@@ -264,6 +300,15 @@
 						display: flex;
 						align-items: center;
 						border-top: 1px solid #fff;
+
+						@include is-max(900px) {
+							width: calc(100% - 80px);
+						}
+
+						@include is-max(373px) {
+							width: calc(100% - 65px);
+						}
+
 						p {
 							@include font-line(13);
 							letter-spacing: 0.12em;
@@ -277,10 +322,20 @@
 							// 	padding: 31px 0 31px 40px;
 							// }
 
+							@include is-max(900px) {
+								padding-left: 0;
+								font-size: 1.5vw;
+							}
+
 							@include is-sp {
 								@include font-line(13, 25);
 								letter-spacing: 0.1em;
-								padding: 15px 0 15px 20px;
+								padding: 15px 0 15px 10px;
+								white-space: nowrap;
+							}
+
+							@include is-max(373px) {
+								padding-left: 0;
 							}
 						}
 
@@ -331,7 +386,6 @@
 
 				& .info:nth-child(3) {
 					.info_left {
-
 						&::after {
 							height: 87%;
 							top: 9%;
@@ -342,13 +396,10 @@
 							// }
 						}
 					}
-
-					
 				}
 
 				& .info:nth-child(2) {
 					.info_left {
-
 						&::after {
 							height: 95%;
 							top: 2%;
@@ -359,12 +410,10 @@
 							// }
 						}
 					}
-					
 				}
 
 				& .info:first-child {
 					.info_left {
-
 						&::after {
 							height: 92%;
 							top: 4%;
@@ -376,7 +425,6 @@
 							// }
 						}
 					}
-					
 				}
 			}
 
@@ -405,6 +453,7 @@
 
 	& .section_3 {
 		padding-bottom: 100px;
+		overflow: hidden;
 
 		@include is-sp {
 			padding-bottom: 75px;
@@ -612,6 +661,14 @@
 			}
 		}
 
+		&__bg_3 {
+			position: absolute;
+			right: -19px;
+			bottom: 31%;
+			width: 306px;
+			z-index: -1;
+		}
+
 		&__cnt01 {
 			margin-bottom: 70px;
 
@@ -671,6 +728,10 @@
 	}
 
 	&--fd {
+		@include is-max(800px) {
+			padding: 0 !important;
+			justify-content: space-around;
+		}
 		@include is-sp {
 			flex-direction: column;
 			padding: 0;
