--- a/src/assets/scss/pages/_realestatepurchase.scss
+++ b/src/assets/scss/pages/_realestatepurchase.scss
@@ -30,6 +30,10 @@
 			position: absolute;
 			right: 7%;
 			top: -95px;
+			@include is-sp{
+				right: 3%;
+				width: 176px;
+			}
 		}
 
 		&::before {
@@ -141,6 +145,18 @@
 	.sect_2 {
 		position: relative;
 		background: linear-gradient(to right, #2868b1, #3b88ca);
+
+		&__box-big-new{
+			position: absolute;
+			left: 46%;
+			top: 18px;
+		}
+
+		&__box-big-new2{
+			position: absolute;
+			bottom: 0;
+			margin-left: -60px;
+		}
 
 		.c-buttonREP{
 			.txt{
@@ -289,7 +305,7 @@
 		position: relative;
 		background: linear-gradient(to right, #2579be, #2592d4);
 
-			.c-buttonREP{
+		.c-buttonREP{
 			.txt{
 				color: #2589ce;
 			}
@@ -305,6 +321,18 @@
 			@include is-sp {
 				padding-bottom: 25px;
 			}
+		}
+
+		&::after {
+			content: "";
+			position: absolute;
+			width: 100%;
+			bottom: -58px;
+			height: 60px;
+			z-index: 1;
+			background: linear-gradient(to right, #2579be, #2592d4);
+			-webkit-clip-path: polygon(0 0, 100% 1%, 100% 100%, 80% 5%, 0 98%);
+			clip-path: polygon(0 0, 100% 1%, 100% 100%, 85% 5%, 0 98%);
 		}
 
 		.l-wrap {
@@ -370,6 +398,21 @@
 				}
 			}
 			&--right {
+				.c-bdg{
+					position: absolute;
+					top: 50%;
+					left: 50%;
+					transform: translate(-50%, - 50%);
+					width: 125px;
+					display: block;
+					text-align: center;
+					height: auto;
+
+					.bdg--blue{
+						padding: 15px 0;
+						@include font-line(20);
+					}
+				}
 			}
 		}
 	}
@@ -380,10 +423,26 @@
 		margin-bottom: 60px;
 		background-color: #fff;
 
-			.c-buttonREP{
+		.c-buttonREP{
 			.txt{
 				color: #2589ce;
 			}
+		}
+
+		&__box-big-new{
+			position: absolute;
+			left: 62%;
+			top: -14px;
+		}
+		&__box-big-new2{
+			position: absolute;
+			left: 0;
+			top: 137px;
+		}
+		&__box-big-new3{
+			position: absolute;
+			right: -6%;
+			top: 43%;
 		}
 
 		&::after {
@@ -411,6 +470,7 @@
 		}
 
 		.l-wrap {
+			position: relative;
 		}
 
 		&--top-realestate {
@@ -420,7 +480,7 @@
 		&__eng--ttl {
 			font-family: century-gothic, sans-serif;
 			@include font-line(13, 20);
-			color: #2589ce;
+			color: #9ec4e3;
 			letter-spacing: 0.21em;
 			text-align: left;
 			font-weight: 600;
@@ -566,6 +626,17 @@
 			background-color: #fff;
 		}
 
+		&__box-big-new{
+			position: absolute;
+			left: 46%;
+			top: 5px;
+		}
+		&__box-big-new2{
+			position: absolute;
+			left: 0;
+			bottom: 10%;
+		}
+
 		&::after {
 			content: "";
 			position: absolute;
@@ -590,6 +661,7 @@
 		}
 
 		.l-wrap {
+			position: relative;
 		}
 
 		&__inner-realestate {
@@ -636,7 +708,7 @@
 					font-weight: 600;
 					@include font-line(13, 26);
 					text-align: left;
-					color: #000;
+					color: #fff;
 					padding-top: 15px;
 					padding-bottom: 15px;
 					letter-spacing: 0.2em;
@@ -701,7 +773,24 @@
 			order: 1;
 		}
 
+		&__box-big-new{
+			position: absolute;
+			left: 54%;
+			top: -3%;
+		}
+		&__box-big-new2{
+			position: absolute;
+			left: -5%;
+			top: 19%;
+		}
+		&__box-big-new3{
+			position: absolute;
+			right: 0;
+			bottom: 30%;
+		}
+
 		.l-wrap {
+			position: relative;
 		}
 
 		&__inner-realestate {
@@ -815,6 +904,17 @@
 			}
 		}
 
+		&__box-big-new{
+			position: absolute;
+			left: 46%;
+			top: -12%;
+		}
+		&__box-big-new2{
+			position: absolute;
+			left: 0;
+			top: 24%;
+		}
+
 		&::before {
 			content: " ";
 			position: absolute;
@@ -834,10 +934,11 @@
 			height: 60px;
 			background: linear-gradient(to right, #2868b1, #3b88ca);
 			-webkit-clip-path: polygon(0 0, 100% -25%, 100% 100%, 80% 5%, 0 98%);
-			clip-path: polygon(0 0, 100% -25%, 100% 100%, 80% 5%, 0 98%);
+			clip-path: polygon(0 0, 100% -25%, 100% 100%, 85% 5%, 0 98%);
 		}
 
 		.l-wrap {
+			position: relative;
 		}
 
 		&--top-casestudy {
@@ -929,7 +1030,31 @@
 			}
 		}
 
+		&__box-big-new{
+			position: absolute;
+			left: 57%;
+			top: -12%;
+		}
+		&__box-big-new2{
+			position: absolute;
+			left: -4%;
+			top: 139%;
+			@include is-sp{
+				display: none;
+			}
+		}
+
+		&__box-big-new3{
+			position: absolute;
+			right: -4%;
+			bottom: 58%;
+			@include is-sp{
+				display: none;
+			}
+		}
+
 		.l-wrap {
+			position: relative;
 			display: flex;
 			flex-wrap: wrap;
 		}
@@ -937,6 +1062,7 @@
 		&--top {
 			border-left: 3px solid #2589ce;
 			padding-left: 15px;
+			position: relative;
 		}
 		&__eng--ttl {
 			font-family: century-gothic, sans-serif;
@@ -972,6 +1098,7 @@
 			justify-content: space-between;
 
 			.l-wrap {
+				position: relative;
 				margin-top: 70px;
 				margin-bottom: 70px;
 				width: 100%;
@@ -993,13 +1120,13 @@
 
 		.Question,
 		.Answer {
-			width: 20%;
+			width: 15%;
 			padding-left: 4px;
 		}
 
 		.qtext,
 		.atext {
-			width: 80%;
+			width: 85%;
 		}
 
 		.Question {
@@ -1030,6 +1157,9 @@
 			text-align: left;
 			font-weight: 700;
 			padding-bottom: 5px;
+			@include is-sp{
+				line-height: 1;
+			}
 		}
 
 		.atext {
