fix header css background

--- a/src/assets/scss/object/component/_banner.scss
+++ b/src/assets/scss/object/component/_banner.scss
@@ -1,7 +1,8 @@
 .c-banner{
-		background: rgb(95, 165, 205);
+		background: #72A3C8;
 		margin: 0 auto;
 		text-align: center;
+		
 
 		img{
 		 position: relative;
